--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,7 @@ book:
   chapters:
     - index.qmd
     - overview.qmd
+    - assess.qmd
     - introduction.qmd
     - webarch.qmd
     - dataarch.qmd
