--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,6 +25,7 @@ book:
   downloads: [pdf, epub]
   chapters:
     - index.qmd
+    - structure.qmd
     - overview.qmd
     - assess.qmd
     - introduction.qmd
