--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,19 +24,15 @@ book:
     background: light
   downloads: [pdf, epub]
   chapters:
-    - index.qmd
-    - structure.qmd
-    - overview.qmd
-    - assess.qmd
-    - introduction.qmd
-    - webarch.qmd
-    - dataarch.qmd
-    - apis.qmd
-    - mapdesign.qmd
-    - interact.qmd
-    - choro.qmd
-    - dashboards.qmd
-    - techgallery.qmd
+    - general/index.qmd
+    - general/structure.qmd
+    - general/overview.qmd
+    - general/assess.qmd
+    - labs/w01_refresher.qmd
+    - labs/w02_maps.qmd
+    - labs/w03 dataArch.qmd
+    - labs/w04_webArch.qmd
+    - labs/w05_interactive.qmd
     
 bibliography: references.bib
 
