--- a/environment.yml
+++ b/environment.yml
@@ -2,21 +2,21 @@ name: gis
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.12.12=haa95532_0
-  - expat=2.5.0=hd77b12b_0
-  - libffi=3.4.4=hd77b12b_0
-  - openssl=3.0.12=h2bbff1b_0
-  - pip=23.3.1=py311haa95532_0
-  - python=3.11.5=he1021f5_0
-  - setuptools=68.2.2=py311haa95532_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.41.2=py311haa95532_0
-  - xz=5.4.5=h8cc25b3_0
-  - zlib=1.2.13=h8cc25b3_0
+  - bzip2=1.0.8
+  - ca-certificates=2023.12.12
+  - expat=2.5.0
+  - libffi=3.4.4
+  - openssl=3.0.12
+  - pip=23.3.1
+  - python=3.11.5
+  - setuptools=68.2.2
+  - sqlite=3.41.2
+  - tk=8.6.12
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.41.2
+  - xz=5.4.5
+  - zlib=1.2.13
   - pip:
       - affine==2.4.0
       - anyio==4.2.0
