--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,24 @@
-beautifulsoup4==4.12.2
-bleach==6.1.0
-branca==0.7.0
-Cartopy==0.22.0
 census==0.8.21
-colorama==0.4.6
 contextily==1.5.0
-contourpy==1.2.0
 fiona==1.9.5
 folium==0.15.1
-geographiclib==2.0
 geopandas==0.14.1
 geoplot==0.5.1
-geopy==2.4.1
-jellyfish==0.11.2
 jenkspy==0.4.0
-json5==0.9.14
-libpysal==4.9.2
-llvmlite==0.41.1
 mapclassify==2.6.1
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
-mercantile==1.2.1
 movingpandas==0.17.2
 networkx==3.2.1
 numba==0.58.1
 numpy==1.26.3
 osmnx==1.8.1
-packaging==23.2
 pandas==2.1.4
-pyCensus==0.0.2
+panel==1.3.8
+plotly==5.18.0
 pyproj==3.6.1
-rasterio==1.3.9
 requests==2.31.0
-rpds-py==0.16.2
 Rtree==1.1.0
-scikit-learn==1.3.2
-scipy==1.11.4
 seaborn==0.13.1
-urllib3==2.1.0
 us==3.1.1
 xyzservices==2023.10.1
