--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,5 @@
 .ipynb_checkpoints/
 ./*/.ipynb_checkpoints/
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-
-# User-specific files
-.Ruserdata
-
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
 
 # produced vignettes
 vignettes/*.html
@@ -29,18 +8,9 @@ vignettes/*.pdf
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
-# knitr and R markdown default cache directories
 *_cache/
 /cache/
 /labs/cache/
-
-docs/
+/notebooks/cache/
 
 /.quarto/
-.DS_Store
-data/.DS_Store
-data/.DS_Store
-data/liverpool_data/.DS_Store
-data/liverpool_data/E08000012/.DS_Store
-data/liverpool_data/merseyside-latest-free.shp/.DS_Store
-data/.DS_Store
