--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,9 @@ book:
     - general/overview.qmd
     - general/assessments.qmd
     - general/setUp.qmd
+        chapters:
+        - general/pythonwin.qmd
+        - general/pythonmac.qmd
     - labs/w01_intro.ipynb
     - labs/w02_maps.ipynb
     - labs/w03_webArch.ipynb
