--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,8 +25,7 @@ book:
     - general/structure.qmd
     - general/overview.qmd
     - general/assessments.qmd
-    - general/pythonwin.qmd
-    - general/pythonmac.qmd
+    - general/setup.qmd
     - labs/w01_intro.ipynb
     - labs/w02_maps.ipynb
     - labs/w03_webArch.ipynb
