--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,7 @@ book:
     - labs/w05_dataArch.ipynb
     - labs/w07_OSM.ipynb
     - labs/w08_dashboards.ipynb
+    - labs/w09_advanced.ipynb
     
 bibliography: references.bib
 
