--- a/envs456.yml
+++ b/envs456.yml
@@ -1,4 +1,4 @@
-name: gis
+name: wma
 channels:
   - defaults
 dependencies:
@@ -56,7 +56,6 @@ dependencies:
       - holoviews==1.18.1
       - hvplot==0.9.1
       - idna==3.6
-      - install==1.3.5
       - ipykernel==6.28.0
       - ipython==8.19.0
       - ipython-genutils==0.2.0
