--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,12 +4,12 @@ project:
 
 book:
   title: "Web Mapping and Geovisualisation"
-  author: "Gabriele Filomena and Elisabetta Pietrostefani"
+  author: "Gabriele Filomena, Elisabetta Pietrostefani, and Matt Howard"
   date: today
 
   page-footer:
     left: |
-      Web Mapping and Geovisualisation by Gabriele Filomena and Elisabetta Pietrostefani.
+      Web Mapping and Geovisualisation by Gabriele Filomena, Elisabetta Pietrostefani, and Matt Howard.
     right: |
       This book was built with <a href="https://quarto.org/">Quarto</a>.
   search: true
